[project]
name = "tier-maker-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "markdown>=3.8",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
